fixes implementation bug for getRequiredHeaders