@@ -1,6 +1,7 @@
 package com.bakdata.conquery.models.preproc.outputs;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import javax.validation.constraints.NotEmpty;
@@ -37,7 +38,7 @@ public class CompoundDateRangeOutput extends OutputDescription {
 
 	@Override
 	public List<String> getRequiredHeaders() {
-		return List.of(getStartColumn(), getEndColumn());
+		return Collections.emptyList();
 	}
 
 	@Override
